styles/AppointmentModal.module.css
.modal {
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
}

.modal > h2 {
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  padding: 20px;
  width: 100%;
  text-align: center;
  z-index: 2;
}

.dateTimeSection {
  width: 100%;
  max-width: 1000px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-evenly;
  overflow-y: auto;
}

.calendar {
  border: none;
  box-shadow: 0 32px 64px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
  padding: 10px;
  margin: 10px;
  width: 100%;
  max-width: 600px;
}

.timePicker {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 20px;
}

.timePicker label {
  font-weight: bold;
  margin-bottom: 10px;
}

.timeSelect {
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  font-size: 16px;
  width: 100%;
  max-width: 200px;
  text-align: center;
}

.button {
  padding: 10px 20px;
  background-color: var(--color-primary);
  color: black;
  border: 1px solid #000000;
  border-radius: 4px;
  cursor: pointer;
  transition: transform 0.3s;
  text-align: center;
  text-decoration: none;
}

.weekend {
  color: black;
}

.selectedDate {
  background: #006edc;
  color: white;
}

.form {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  width: 100%;
  max-width: 1000px;
  overflow-y: auto;
}

.label {
  width: 80%;
  display: block;
  font-weight: bold;
  margin: 0 auto 5px;
}

.input {
  display: block;
  width: 80%;
  margin: 10px auto 30px;
  padding: 8px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.address {
  margin: 10px auto;
}

.review {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 80%;
  max-width: 1000px;
  overflow-y: auto;
}

.review > p {
  margin: 10px 0;
}

.buttonContainerSingle {
  width: 100%;
  display: flex;
  justify-content: flex-end;
  padding: 20px;
}

.buttonContainer {
  width: 100%;
  display: flex;
  justify-content: space-between;
  padding: 20px;
}

.buttonContainerSingle,
.buttonContainer {
  width: 100%;
  display: flex;
  justify-content: space-between;
  padding: 20px;
  box-shadow: 0 -8px 6px rgba(0, 0, 0, 0.1);
}

.buttonLeft,
.buttonRight {
  padding: 10px 20px;
  background-color: var(--color-primary);
  color: black;
  border: 1px solid #000000;
  border-radius: 4px;
  cursor: pointer;
  transition: transform 0.3s;
  text-align: center;
  text-decoration: none;
  min-width: 80px;
}

.buttonLeft {
  margin-right: auto; /* Align Back button to the left */
}

.buttonRight {
  margin-left: auto; /* Align Next and Confirm buttons to the right */
}

.disabledButton {
  background-color: #ccc;
  color: #666;
  cursor: not-allowed;
  border: 1px solid #999;
}

.buttonRight:disabled {
  background-color: #ccc;
  color: #666;
  cursor: not-allowed;
  border: 1px solid #999;
}

.error {
  color: red;
  font-size: 12px;
}

/*TODO: update this for mobile*/

